--- a/CSS/Assignment/CSSassignment/Task1/style.css
+++ b/CSS/Assignment/CSSassignment/Task1/style.css
@@ -52,8 +52,22 @@ body{
     border-radius: 10px;
     margin-top: 20px;
     margin-bottom: 10px;
+    padding-top: 12px;
     text-align: center;
 }
+
+#registerNow{
+    
+    font-family: poppins;
+    background-color: #4070f4;
+    width: 350px;
+    margin: 30px 0px;
+    text-align: center;
+    border-radius: 10px;
+    color: white;
+    height: 40px;
+}
+
 
 #formEnd{
     #account{
@@ -87,17 +101,6 @@ body{
 #checkbox2{
     font-family: poppins;
     font-size: smaller;
-}
-#registerNow{
-    
-    font-family: poppins;
-    background-color: #4070f4;
-    width: 350px;
-    margin: 30px 0px;
-    text-align: center;
-    border-radius: 10px;
-    color: white;
-    height: 40px;
 }
 
 #formEnd2{
