--- a/CSS/Assignment/Portfolio/style2.css
+++ b/CSS/Assignment/Portfolio/style2.css
@@ -127,7 +127,7 @@
 #companies2{
     display: flex;
     filter: grayscale(120%);
-    margin: 30px 6px;
+    margin: 30px 6px 150px;
     img{
         width: 190px;
         height: 125px;
