--- a/BootStrap/Assignment/Task2/style.css
+++ b/BootStrap/Assignment/Task2/style.css
@@ -18,11 +18,7 @@ a{
     text-decoration: none;
     color: white;
 }
-.heading{
-    font-size: larger;
-    color: white;
-    margin: auto;
-}
-.details{
-    font-size: small;
+
+.om{
+    gap: 500px;
 }
